hphp/hack/test/typecheck/loop_forever_switch.php.exp
File "loop_forever_switch.php", line 3, characters 47-47:
A left brace `{` is expected here. (Parsing[1002])
File "loop_forever_switch.php", line 3, characters 47-48:
Malformed block result (Parsing[1002])
File "loop_forever_switch.php", line 3, characters 63-63:
Malformed block result (Parsing[1002])
File "loop_forever_switch.php", line 3, characters 32-33:
Variable `$a` is undefined, or not always defined. (Naming[2050])
File "loop_forever_switch.php", line 3, characters 37-38:
Variable `$b` is undefined, or not always defined. (Naming[2050])
File "loop_forever_switch.php", line 3, characters 32-33:
Did you mean `$a` instead?
File "loop_forever_switch.php", line 3, characters 42-43:
Variable `$c` is undefined, or not always defined. (Naming[2050])
File "loop_forever_switch.php", line 3, characters 32-33:
Did you mean `$a` instead?
File "loop_forever_switch.php", line 3, characters 63-71:
Unbound name: `endswitch` (a global constant) (Naming[2049])
